force-app/main/default/objects/Links__c/Links__c.object-meta.xml
<CustomObject>
    <description>This is used to create links in the Academy App</description>
    <label>Links</label>
    <nameField>
        <label>Links Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Links</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>