force-app/main/default/objects/Links__c/fields/Link_url__c.field-meta.xml
<CustomField>
    <fullName>Link_url__c</fullName>
    <label>Link URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>