force-app/main/default/objects/Links__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>Articles</fullName>
            </value>
            <value>
                <fullName>BIP</fullName>
            </value>
            <value>
                <fullName>Implementing</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>KPI</fullName>
            </value>
            <value>
                <fullName>KYC</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>VIEWforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>